TODO:
 - add sounds
 - add GUI
 - add API

1.4.2
 + added discord webhook

1.4.1
 + fixed loading error on 1.17.1
 + added /helpop notify command
 + fixed command autocomplete suggestions

1.4.0
 + added checking admins state on all BungeeCord servers
 + added more messages with replacements
 + added changeable buttons for move and response
 + new /helpop message format
 + fixed small issues
 + optimized code

1.3.1
 + added displayname placeholder support
 + added LP prefix, suffix and sisplay name support in history
 + added receiving prefix, suffix, displayname setting option
 + changed databases structure (auto-change from older version)
 + optimized code and responsing system

1.3.0
 + added LuckPerms prefix and suffix supports
 + added more replaceable values in messages
 + new messaging system

1.2.6
 + changed prefix to removable in admin messages
 + fixed error while plugin stopping when bungee is disabled
 + added notification about update to player with permissions
 + added file version in config.yml
 + added file version in messages.yml

1.2.5:
 + added response to player
 + added notification to other administrations about response
 + fixed seconds implemented in integer type

1.2.2:
 + added default config and message download
 + added update checker
 + added server name typing in config
 + added cooldown to messages based on permission

1.2:
 + fixed server name displaying in BungeeCord mode,
 + fixed server name displaying in local mode,
 + added version control for title displaying (1.9+).

1.1:
 + added BungeeCord support,
 + small code fixes
 + added new messages

1.0:
 + FIRST RELEASE